fix: use 100dvh to fix mobile scroll cutoff on bottom

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,6 +13,7 @@ body {
   font-size: 14px;
   max-width: 900px;
   height: 100vh;
+  height: 100dvh;
   overflow: hidden;
   display: flex;
   flex-direction: column;
